# fly_in

./: .gitignore  file.txt  makefile  pyproject.toml  text.txt
src/: main.py  parsing.py
