[project]
name = "call-me-maybe"
version = "1.0.0"
authors = [
  { name="mboutte", email="mboutte@student.42lyon.fr" },
]
description = "None"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "flake8",
    "mypy",
]

[project.optional-dependencies]
dev = [
]

[project.urls]
"Homepage" = "https://projects.intra.42.fr/fly-in/mboutte"

[tool.mypy]
mypy_path = "src"
files = ["src"]